--- a/assets/index.html
+++ b/assets/index.html
@@ -362,8 +362,61 @@
             </div>
         </section>
 
-      
+
+        <section class="contact section" id="contact">
+            <span class="section-subtitle">Contact Me</span>
+            <h2 class="section-title">Get In Touch</h2>
+
+            <div class="contact_container bd-grid">
+                <form action="" class="contact_form">
+                    <div class="contact_inputs">
+                        <input type="text" placeholder="Name" class="contact_input">
+                        <input type="mail" placeholder="Email" class="contact_input"> 
+                    </div>
+
+                    <input type="text" placeholder="Project" class="contact_input">
+
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mesage" class="contact_input" ></textarea>
+
+                    <input type="submit" value="Send Message" class="button contact_button">
+                </form>
+
+                <div>
+                    <div class="contact_info">
+                        <h3 class="contact_subtitle">Call me</h3>
+                        <span class="contact_text">999-000-123</span>
+                        <span class="contact_text">999-000-123</span>
+                    </div>
+
+                    <div class="contact_info">
+                        <h3 class="contact_subtitle">E-mail</h3>
+                        <span class="contact_text">harrisuser@gmail.com</span>
+                        <span class="contact_text">contactme@harris.com</span>
+                    </div>
+
+                    <div class="contact_info">
+                        <h3 class="contact_subtitle">Location</h3>
+                        <span class="contact_text">Av. Bolivar #123</span>
+                        <span class="contact_text">Lima -Peru</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer section">
+        <div class="footer_container bd-grid">
+            <h1 class="footer_title">Harris</h1>
+            <p class="footer_description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem ullam illo cupiditate porro aliquam ducimus eligendi dolor quaerat fuga iste. Corrupti accusamus ducimus numquam minima veritatis tenetur quae facilis commodi.</p>
+
+            <div class="footer_social">
+                <a href="#" class="footer_link"><i class='bx bxl-facebook'></i></a>
+                <a href="#" class="footer_link"><i class='bx bxl-instagram'></i></a>
+                <a href="#" class="footer_link"><i class='bx bxl-twitter'></i></a>
+            </div>
+
+            <p class="footer_copy">All right reserver by Bedimcode - 2020</p>
+        </div>
+    </footer>
     
     <script src="/assets/js/main.js"></script>
 </body>
